feat(agent): gate trusted campaign adapter composition (#118)